minor dev-dependency updates